<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="top|center">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:id="@+id/topHalfView">

            <ImageView
                android:id="@+id/topWidgetBackground"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/top_rounded_rect"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:padding="9dp"
                android:id="@+id/settingsButton">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:background="@drawable/gear_icon"/>
            </LinearLayout>

            <ProgressBar
                android:visibility="gone"
                android:id="@+id/refreshProgressView"
                android:indeterminateTint="@color/widgetPrimaryTextColorGrey"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:indeterminate="true"
                android:layout_centerInParent="true"/>

            <LinearLayout
                android:id="@+id/contentView"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageView
                    android:id="@+id/weatherIcon"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/simple_partly_cloudy_large"
                    android:scaleType="fitStart"
                    android:adjustViewBounds="true"
                    android:layout_weight="0.2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:layout_width="0dp"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="0.4"/>
                    <TextView
                        android:id="@+id/tempText"
                        android:gravity="right"
                        android:layout_marginEnd="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/widgetPrimaryTextColorGrey"
                        android:textStyle="normal"
                        android:textSize="25dp"
                        android:text="79°"/>
                    <TextView
                        android:layout_marginEnd="5dp"
                        android:layout_marginTop="2dp"
                        android:id="@+id/conditionText"
                        android:gravity="left"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/widgetPrimaryTextColorGrey"
                        android:textStyle="normal"
                        android:textSize="15dp"
                        android:text="Mostly Cloudy"/>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="0.5"/>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:gravity="center"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5">

            <ImageView
                android:id="@+id/bottomWidgetBackground"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/bottom_rounded_rect"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:id="@+id/detailsRootContainer">
                <include
                    layout="@layout/current_info_layout"
                    android:id="@+id/currentInfoRootContainer"
                    android:visibility="gone"/>
                <include
                    layout="@layout/hourly_forecast_layout"
                    android:id="@+id/hourlyRootContainer"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:id="@+id/tutorialView"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/widget_rounded_rect"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="10dp">
            <TextView
                android:gravity="center"
                android:id="@+id/tutorialTextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/widgetPrimaryTextColorGrey"
                android:textStyle="normal"
                android:textSize="25dp"
                android:text="@string/tutorialTextStart"/>

            <TextView
                android:visibility="gone"
                android:id="@+id/tutorialTextView"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/widgetPrimaryTextColorGrey"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="16dp"
                android:text="@string/tutorialText1"/>

            <TextView
                android:id="@+id/tutorialNextButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/tutorialNextText"
                android:textSize="13dp"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="11dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_marginTop="23dp"
                android:background="@drawable/blue_button_drawable"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>