<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:id="@+id/rootView">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/widget_rounded_drawable">

        <ProgressBar
            android:visibility="gone"
            android:id="@+id/refreshProgressView"
            android:indeterminateTint="@color/widgetPrimaryTextColorGrey"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:indeterminate="true"
            android:layout_centerInParent="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/rootContentView">

            <LinearLayout
                android:id="@+id/detailsContentView"
                android:visibility="gone"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <include
                    layout="@layout/hourly_forecast_layout"
                    android:id="@+id/hourlyRootContainer"
                    android:visibility="gone"/>
                <include
                    layout="@layout/current_info_layout"
                    android:id="@+id/currentInfoRootContainer"
                    android:visibility="gone"/>
            </LinearLayout>

            <LinearLayout
                android:visibility="visible"
                android:id="@+id/contentView"
                android:paddingLeft="10dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageView
                    android:id="@+id/weatherIcon"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/simple_sunny"
                    android:scaleType="fitStart"
                    android:adjustViewBounds="true"
                    android:layout_weight="0.2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:layout_width="0dp"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="0.4"/>
                    <TextView
                        android:id="@+id/tempText"
                        android:gravity="right"
                        android:layout_marginEnd="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#637185"
                        android:textStyle="normal"
                        android:textSize="45dp"
                        android:text="79°"/>
                    <TextView
                        android:layout_marginEnd="5dp"
                        android:layout_marginTop="2dp"
                        android:id="@+id/conditionText"
                        android:gravity="left"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#637185"
                        android:textStyle="normal"
                        android:textSize="25dp"
                        android:text="Mostly Cloudy"/>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="0.5"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/refreshButton"
            android:orientation="horizontal"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="5dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/refresh_icon"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:padding="8dp"
            android:id="@+id/settingsButton">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:background="@drawable/gear_icon"/>
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:id="@+id/tutorialView"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/widget_rounded_rect"
            android:visibility="visible"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:visibility="visible"
                    android:id="@+id/tutorialTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/widgetPrimaryTextColorGrey"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="16dp"
                    android:text="@string/tutorialTextSmall1"/>

                <TextView
                    android:id="@+id/tutorialNextButton"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tutorialButtonFinishText"
                    android:textSize="13dp"
                    android:textStyle="bold"
                    android:textColor="#ffffff"
                    android:gravity="center"
                    android:paddingTop="15dp"
                    android:paddingBottom="16dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:layout_marginTop="13dp"
                    android:background="@drawable/blue_button_drawable"/>
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>